--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
         <div class="flex w-[300px] items-center gap-2">
           <i class="fa-regular fa-lightbulb text-7xl"></i>
           <div>
-            <h3 class="text-2xl font-bold">Feeding</h3>
+            <h3 class="text-2xl font-bold">Light</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
           </div>
         </div>
         <div class="flex w-[300px] items-center gap-2">
           <i class="fa-solid fa-person-digging text-7xl"></i>
           <div>
-            <h3 class="text-2xl font-bold">Feeding</h3>
+            <h3 class="text-2xl font-bold">Care</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
           </div>
         </div>
