--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <img
         src="./photos/6_folwer_cut.png"
         alt=""
-        class="absolute bottom-0 right-0 max-w-[40%] mx-auto"
+        class="absolute bottom-0 right-0 z-[-1] max-w-[40%] mx-auto"
       />
       <nav class="flex justify-between items-center h-24 px-10 xl:px-36">
         <img src="./photos/Logo.svg" alt="" />
