--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </script>
     <title>Document</title>
   </head>
-  <body>
+  <body class="overflow-hidden">
     <div class="w-full h-full">
       <img
         src="./photos/6_folwer_cut.png"
@@ -76,7 +76,7 @@
       </nav>
       <!-- Main Content -->
       <main
-        class="pl-16 lg:pl-36 h-[700px] flex justify-center w-[400px] md:w-[600px] xl:w-[900px] flex-col gap-6 items-start"
+        class="pl-10 xl:pl-24 h-[700px] flex justify-center w-[400px] md:w-[600px] xl:w-[900px] flex-col gap-6 items-start"
       >
         <h1
           class="text-6xl md:text-7xl lg:8xl xl:text-9xl font-bold font-montserrat"
