--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         },
       };
     </script>
-    <title>Document</title>
+    <title>Plant Homepage</title>
   </head>
   <body class="overflow-hidden">
     <div class="w-full h-full">
