--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           porro quibusdam. Voluptatem, amet soluta.
         </p>
         <button
-          class="bg-green-900 rounded-full text-2xl lg:text-3xl xl:text-5xl text-white px-6 lg:px-8 xl:px-10 py-2 lg:py-3 xl:py-4 mt-14"
+          class="bg-green-900 rounded-full text-2xl lg:text-3xl xl:text-5xl text-white px-6 lg:px-8 xl:px-10 py-2 lg:py-3 xl:py-4 mt-10 xl:mt-14"
         >
           Discover
           <i class="fa-solid fa-greater-than"></i>
